2006-06-15 00:51 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h: Added
	new method declarations.
	* Source/GSNibCompatibility.m: Added isInterfaceBuilder method
	here.
	* Source/NSDocument.m: Added code to prevent the popup from
	showing blank when the fileType is set to a non-Editor type.

2006-06-11  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView_actions.m (-deleteToEndOfLine:): New method
	based on patch by Andreas Höschler <ahoesch@smartsoft.de>.
	* KeyBindings/DefaultKeyBindings.dict: Enable Control-k.

2006-06-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-discardCursorRects) 
	* Source/NSWindow.m (-invalidateCursorRectsForView:): Updated
	version of patch for improved handling of cursor rects to fix bug #5871. 
	Patch by Mircea Trache <aer@shaw.ca>.
	
2006-06-08 00:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibContainer.h: Minor cleanup.
	* Source/GSNibCompatibility.m: Added exception similar to the
	one for NSWindow to classes here, which don't implement non-keyed
	coding.
	* Source/GSNibTemplates.m: Added initial objects for GSCustomClass,
	NSDeferred, NSVisible names in name table.
	* Source/NSWindow.m: Added corrected exception text.

2006-06-04 13:30 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSDrawer.h: Added ivar _contentSize to header.
	* Source/NSDrawer.m: Implemented keyed and non-keyed encoding.

2006-06-04 12:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSTrackingRect.m: Encode, if not a keyed archiver.
	* Source/NSApplication.m: Added coding
	* Source/NSDataLink.m: Added coding
	* Source/NSDataLinkManager.m: Added coding
	* Source/NSNib.m: Made comment use "TODO_NIB" instead of TODO, so that
	it can be pulled later.
	* Source/NSParagraphStyle.m: Added TODO_NIB.
	* Source/NSSelection.m: Added coding.
	* Source/NSSound.m: Added TODO_NIB
	* Source/NSTextAttachment.m: Added TODO_NIB.
