@@ -1,3 +1,9 @@
+2006-06-17 10:52 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h: Removed
+	unecessary ivar.
+	* Source/GSNibCompatibility.m: Remove some uneeded code
+
 2006-06-15 00:51 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h: Added
